--- a/task-timer/package.json
+++ b/task-timer/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "chart.js": "^4.4.3",
+    "uuid": "^9.0.1",
+    "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5.0.5",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "vite": "^5.2.8"
