--- a/task-timer/package.json
+++ b/task-timer/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chart.js": "^4.4.3",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1"
